--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ Portfolio Practice
 </head>
 <body>
 <ul id='header'>
-    <li><a class='headera' href="about.html">About Me</a></li>
-    <li><a class='headera' href="gallery.html">Photo Gallery</a></li>
+    <li class="headera"><a href="https://www.linkedin.com/in/chance-robinson/">Linked-In</a></li>
+    <li class="headera"><a href="https://github.com/chance-robinson">GitHub</a></li>
 </ul>
 <h1>About</h1>
 <p>I am super awesome. Not much else to be said.</p>
@@ -25,13 +25,6 @@ Portfolio Practice
     <li class='exp'>Low Power Voltage Systems</li>
     <li class='exp'>Entrepenuer</li>
 </ul>
-<hr>
-<h1>Contact</h1>
-<p>You can contact me on:
-    <ul>
-        <li><a href="https://www.linkedin.com/in/chance-robinson/">Linked-In</a></li>
-        <li><a href="https://github.com/chance-robinson">GitHub</a></li>
-    </ul>
 <hr>
 </p>
 </body>
