--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head>
-Portfolio Practice
-<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<ul id='header'>
-    <li class="headera"><a href="https://www.linkedin.com/in/chance-robinson/">Linked-In</a></li>
-    <li class="headera"><a href="https://github.com/chance-robinson">GitHub</a></li>
-</ul>
-<h1>About</h1>
-<p>I am super awesome. Not much else to be said.</p>
-<hr>
-<h1>Projects</h1>
-<ol id='proj'>
-    <li>Hangman</li>
-    <li>Spellcheck</li>
-    <li>3D Maze</li>
-</ol>
-<hr>
-<h1>Experience</h1>
-<ul>
-    <li class='exp'>Walgreens</li>
-    <li class='exp'>Low Power Voltage Systems</li>
-    <li class='exp'>Entrepenuer</li>
-</ul>
-<hr>
-</p>
-</body>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8'/>
+    <title>Some Web Page</title>
+    <link rel='stylesheet' href='styles.css'/>
+  </head>
+  <body>
+    <div class='menu-container'>
+      <div class='menu'>
+        <div class='date'>Aug 14, 2016</div>
+        <div class='signup'>Sign Up</div>
+        <div class='login'>Login</div>
+      </div>
+    </div>
+  </body>
 </html>
