--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class='menu-container'>
       <div class='menu'>
-        <div class='date'>Aug 14, 2016</div>
+        <div class='date'>April 20 1999</div>
         <div class='signup'>Sign Up Now</div>
         <div class='login'>Login</div>
       </div>
