added photo folder

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <div class='menu-container'>
       <div class='menu'>
-        <div class='date'>April 20 1999</div>
-        <div class='signup'>Sign Up Now</div>
+        <div class='date'>April 20, 1999</div>
+        <div class='signup'>Sign Up Now!</div>
         <div class='login'>Login</div>
       </div>
     </div>
