--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='UTF-8'/>
-    <title>Some Web Page</title>
-    <link rel='stylesheet' href='styles.css'/>
+    <meta charset="utf-8">
+    <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
+    <title>Responsive Design</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class='menu-container'>
-      <div class='menu'>
-        <div class='date'>April 20, 1999</div>
-        <div class='signup'>Sign Up Now!</div>
-        <div class='login'>Login</div>
-      </div>
-    </div>
+    <div class='page'>
+  <div class='section menu'><a href="basics.html">Link back to home</a></div>
+  <div class='section header'>
+    <img src='photos/nike-4-logo-svg-vector.svg'/>
+  </div>
+  <div class='section content'>
+    <img src='photos/download.png'/>
+  </div>
+  <div class='section sign-up'>
+    <img src='photos/download (1).png'/>
+  </div>
+  <div class='section feature-1'>
+    <img src='photos/download (1).png'/>
+  </div>
+  <div class='section feature-2'>
+    <img src='photos/download (1).png'/>
+  </div>
+  <div class='section feature-3'>
+    <img src='photos/download (1).png'/>
+  </div>
+</div
   </body>
 </html>
